# fastapi_training

./: alembic.ini  crud.py  items_views.py  main.py  pyproject.toml  queries.sql
alembic/: env.py
alembic/versions/: 2024_10_16_1129-4d40cfc98852_create_products_table.py  2024_10_16_1142-3ae111440e31_create_users_table.py  2024_10_16_1154-c19dc39e33b2_create_posts_table.py  2024_10_16_1236-da15c94d7ca6_create_profile_table.py  2024_10_20_1836-c916423eea88_create_tables_order.py  2024_10_20_1904-f52ba2e689b1_create_order_product_association_table.py  2024_10_20_2051-73aa1b6ca6dc_add_count_column_to_order_product_.py  2024_10_20_2142-8bd4926289ed_add_unit_price_to_order_product_.py
api_v1/: __init__.py
api_v1/products/: crud.py  dependencies.py  schemas.py  views.py
core/: config.py
core/models/: __init__.py  base.py  db_helper.py  mixins.py  order_product_association.py  post.py  product.py  profile.py  user.py
users/: crud.py  schemas.py  views.py
